# IFoundYou

./: .gitignore  LICENSE  README.md  ifoundyou  ifoundyou.cmd  pyproject.toml  whereareyou.ps1  whereareyou.sh
release/: install-linux.sh  install-windows.ps1
scripts/: build_release.py
src/ifoundyou/: __init__.py  __main__.py  cli.py  core.py  formatters.py
tests/: test_core.py
