[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ifoundyou"
version = "2.0.0"
description = "Cross-platform IP, domain and URL inspection CLI for fast network context."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "sularhen" }
]
keywords = ["cli", "network", "ip", "dns", "geolocation", "diagnostics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Internet",
  "Topic :: System :: Networking",
  "Intended Audience :: Information Technology"
]

[project.scripts]
ifoundyou = "ifoundyou.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

